--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,13 +8,12 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="161dp"
-        android:layout_marginLeft="161dp"
+        android:layout_width="196dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginRight="162dp"
+        android:layout_marginEnd="100dp"
+        android:backgroundTint="@color/teal_200"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,10 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="101dp"
-        android:layout_marginLeft="101dp"
         android:layout_marginTop="136dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginRight="101dp"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
@@ -41,10 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="101dp"
-        android:layout_marginRight="101dp"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:ems="10"
         android:hint="****"
         android:inputType="textPassword"
