--- a/app/src/main/res/layout/activity_blood_press_body_temp.xml
+++ b/app/src/main/res/layout/activity_blood_press_body_temp.xml
@@ -25,6 +25,8 @@
             android:layout_marginStart="45dp"
             android:layout_marginTop="51dp"
             android:text="Body Temperature"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,59 +37,78 @@
             android:layout_marginStart="51dp"
             android:layout_marginTop="35dp"
             android:text="Blood Pressure"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButCheck"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="71dp"
+            android:layout_height="74dp"
             android:layout_marginStart="179dp"
-            android:layout_marginTop="67dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="174dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/teal_200"
             android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.666"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/calendarView"
-            app:rippleColor="@color/white"
+            app:rippleColor="@color/black"
             app:srcCompat="@drawable/ic_baseline_check_circle_24" />
 
         <EditText
             android:id="@+id/editTextBodyTemp"
-            android:layout_width="180dp"
-            android:layout_height="40dp"
+            android:layout_width="154dp"
+            android:layout_height="46dp"
             android:layout_marginStart="32dp"
             android:layout_marginTop="44dp"
             android:ems="10"
             android:hint="00.0"
             android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/textView"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextBloodPress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
+            android:layout_width="157dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="52dp"
             android:layout_marginTop="12dp"
             android:ems="10"
             android:hint="000.00"
             android:inputType="textPersonName"
+            android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/editTextBodyTemp" />
 
         <CalendarView
             android:id="@+id/calendarView"
-            android:layout_width="271dp"
-            android:layout_height="268dp"
+            android:layout_width="316dp"
+            android:layout_height="317dp"
             android:layout_marginStart="69dp"
             android:layout_marginTop="29dp"
             android:layout_marginEnd="69dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextBloodPress" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="19dp"
+            android:text="Press the buttom to confirm the numbers!"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/floatingActionButCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
